k8s/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: simple-payment-gateway-class

spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
