k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-payment-api-deployment
  labels:
    app: simple-payment-api
spec: # specification of the deployment
  selector:
    matchLabels:
      app: simple-payment-api
  replicas: 1 # here we will have 5 pods running
  template:
    metadata:
      labels:
        app: simple-payment-api
    spec: # specification for the pod
      containers:
        - name: simple-payment-api
          image:  ghcr.io/ryannguyen1105/simplepayment-api:latest  
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
      imagePullSecrets: 
        - name: ghcr-pull-secret
