k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-payment-api-service
spec:
  selector:
    app.kubernetes.io/name: simple-payment-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
