k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: simple-payment-gateway
  namespace: default
spec:
  gatewayClassName: simple-payment-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "simple-payment-application.onrender.com"
    allowedRoutes:
      namespaces:
        from: Same
