k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-payment-httproute
spec:
  parentRefs:
  - name: simple-payment-gateway
  hostnames:
  - "simple-payment-application.onrender.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: simple-payment-api-service
      port: 80
